[FIX] portal, website_blog: align the navigation
Prior to this commit, the navigation of `website_blog` wasn't correctly
aligned. This commit reworks the alignment to match the page layout.

This was actually a "bug" of our override of BS4/5 to match BS3 behavior
regarding container float-clearing. This fixes that override. It may
be backported in stable versions later if the need arises.

Related to task-3097005

closes odoo/odoo#137692

--- a/addons/portal/static/src/scss/portal.scss
+++ b/addons/portal/static/src/scss/portal.scss
@@ -110,6 +110,13 @@ li > p {
             clear: both;
         }
     }
+    .navbar %container-flex-properties {
+        // Bootstrap set-up flex alignment to "space-between" here. The hack
+        // made above to restore the BS3 protection has to be disabled.
+        &::before, &::after {
+            display: none;
+        }
+    }
 }
 [class^="col-lg-"] {
     min-height: 24px;
